<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/book_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside"/>

            <ImageButton
                android:id="@+id/book_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_book_camera" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:id="@+id/book_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_title_label" />

            <EditText
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:hint="@string/book_title_hint"
                android:textSize="14sp" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_details_label" />

    <EditText
        android:id="@+id/book_summary"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:gravity="start"
        android:hint="@string/book_summary_label"
        android:textSize="12sp" />

    <Button
        android:id="@+id/book_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/book_time"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/timepicker"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/book_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_read_label" />

    <Button
        android:id="@+id/book_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_contact_text"
        android:textSize="12sp" />

    <Button
        android:id="@+id/book_detailSummary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_detailSummary_text"
        android:textSize="12sp" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/delete_button_text"
        android:textColor="@android:color/white"
        android:textSize="12sp" />


</LinearLayout>